Improve app UX and backend deployment
